--- a/practica01css /css/estilos.css
+++ b/practica01css /css/estilos.css
@@ -7,6 +7,32 @@ body{
 header{
     background-color: #D1E3EE;
 }
+header nav{
+    background: #026DC6;
+    border-radius: 5px;
+    margin: 0px auto;
+    padding: 2px 0px;
+    width: 99%;
+}
+header nav form{
+    float: right;
+    margin-right: 10px;
+    margin-top: -35px;
+}
+header nav form input{
+    border-radius: 5px;
+}
+header nav form input[type="submit"]{
+    background: green;
+    border: 1px solid green;
+    color: white;
+}
+header nav ul li{
+    /*border: 1px solid red;*/
+    margin-right: 20px;
+    color: white;
+    display: inline-block;
+}
 #logo{ /*id="logo"*/ 
     margin: -150px 0px 0px 0px;
     /* margin-top: 150px;*/
