--- a/practica02_css/css/estilos.css
+++ b/practica02_css/css/estilos.css
@@ -23,10 +23,54 @@ header nav ul li{
     padding-bottom: 2px;
     /* text-decoration: underline; */
 }
+#bgoffer{
+    left: -35px;
+    position: relative;
+    top: -410px;
+}
 #granthams{
     margin-left: 25px;
     margin-top: 25px;
 }
 #paint{
     float: right;
+}
+#primerseccion{
+    height: 318px;
+    margin-top: 60px;
+}
+#primerseccion article {
+    display: inline-block;
+    vertical-align: top;
+}
+#secc01art01{
+   /* border: 1px solid red; */
+    width: 62%;
+}
+#secc01art02{
+    /* border: 1px solid red; */
+    margin-left: 50px;
+    width: 30%;
+}
+#secc01art02 ul{
+    list-style: none;
+}
+#secc01art02 ul li:before{
+    color: #FF0099;
+    content: "• ";
+}
+.colorazul{
+    color: #4267B3;
+}
+.colorrosa{
+    color: #FF0099;
+}
+.colorverde{
+    color: #8BC500;
+}
+.letragrande{
+    font-size: 3.5em;
+}
+.nito{
+    font-weight: bold;
 }
