--- a/practica02_css/css/estilos.css
+++ b/practica02_css/css/estilos.css
@@ -28,6 +28,10 @@ header nav ul li{
     position: relative;
     top: -410px;
 }
+#footer{
+    border: 1px solid red;
+    background-color: blue;
+}
 #granthams{
     margin-left: 25px;
     margin-top: 25px;
@@ -59,6 +63,24 @@ header nav ul li{
     color: #FF0099;
     content: "• ";
 }
+#secc03art04{
+    padding-top: 60px;
+}
+#segundaseccion article{
+   /* border: 1px solid red; */
+    padding-right: 140px;
+    text-align: right;
+}
+#terceraseccion article{
+    display: inline-block ;
+    vertical-align: top;
+    width: 23%;
+}
+#terceraseccion article img{
+    /* Alineacion vertical del texto que la rodea */
+    vertical-align: middle;
+}
+
 .colorazul{
     color: #4267B3;
 }
@@ -68,8 +90,14 @@ header nav ul li{
 .colorverde{
     color: #8BC500;
 }
+.colorblanco{
+    color: #FFFFFF;
+}
 .letragrande{
     font-size: 3.5em;
+}
+.letramediana{
+    font-size: 2em;
 }
 .nito{
     font-weight: bold;
