--- a/practica03_css/css/estilos.css
+++ b/practica03_css/css/estilos.css
@@ -14,16 +14,33 @@ body{
     margin: 0px auto;
     max-width: 1024px;
 }
-header ul li{
+footer article{
     display: inline-block;
-    margin-left: -10px;
+    margin-top: 20px;
+    padding: 10px;
+    vertical-align: top;
+    width: 31.1%;
+}
+footer img{
+    width: 300px;
+}
+header nav input{
+    text-align: right;
+}
+/*header nav ul li{
+    display: inline-block;
+    margin-left: -6px; 
     padding: 8px 14px;
-    text-align: center;
-    width: 17.0%;
+}*/
+header ul{
+    margin-left: -40px;
 }
 header ul li{
     display: inline-block;
     width: 17.0%;
+    margin-left: -2px;
+    padding: 8px 14px;
+    text-align: center;
 }
 header ul li:nth-child(2){
     background-color: var(--color-verde);
@@ -36,6 +53,13 @@ header ul li:nth-child(4){
 }
 header ul li:nth-child(5){
     background-color: var(--color-gris);
+}
+hr{
+    border-style: dashed;
+    color: var(--color-linea);
+}
+section{
+    align-items: none;
 }
 section article{
     display: inline-block;
@@ -57,7 +81,7 @@ section article:nth-child(4){
     background: var(--color-rojo);
 }
 section article:nth-child(5){
-    background: var(--color-blanco);
+    background: var(--color-gris);
 }
 section,footer{
     background: var(--fondo-negro);
@@ -73,6 +97,10 @@ section img{
 }
 .letra-gris{
     color: var(--color-linea);
+}
+.read-more{
+   /* border: 1px solid red;*/
+    margin-left: 220px;
 }
 .tam-menu-lateral{
     font-size: 1.1em;
