--- a/practica05 CSS/css/estilos.css
+++ b/practica05 CSS/css/estilos.css
@@ -38,7 +38,7 @@ section {
 #menusuperior {
     background: var(--color-gris);
     text-align: right;
-    padding: 8px;
+    padding: 4px;
 }
 
 #menusuperior article img {
@@ -50,6 +50,12 @@ section {
 #PanelLateral {
     width: 24.5%;
     /* border: 1px solid red; */
+}
+
+.letrablanca{
+    color: var(--color-blanco);
+    font-size: 19px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 section nav ul li, article ul li {
@@ -64,12 +70,10 @@ ul{
 #PanelLink {
     background: var(--color-azulfuerte);
     height: 47%;
-    padding: 50px;
 }
 
 #PanelLink img {
-    height: 48%;
-    width: 250px;
+    width: 100%;
 }
 
 #PanelProgress{
@@ -78,8 +82,7 @@ ul{
 }
 
 #PanelProgress img {
-    height: 48%;
-    width: 250px;
+    width: 100%;
 }
 
 #megaseccion {
@@ -89,34 +92,108 @@ ul{
     overflow: hidden;
 }
 
-#Cubos article{
-    float: left;
-    width: 23.9%;
-    box-sizing: border-box;
-    padding: 10px;
-}
-
 .Titulo {
     float: left;
     overflow: hidden;
+}
+
+#Cubos article{
+    float: left;
+    width: 22%;
+    box-sizing: border-box;
+    border-radius: 5px;
+    text-align: center;
+    margin: 0 15px 5px 0;
 }
 
 #Cubos article img{
     text-align: center;
     clear: left; 
     display: inline-block;
-    width: 50%;
+    width: 55%;
+}
+
+#Art1{
+    background-color: var(--color-verde);
+    padding: 7px 2px;
+}
+
+#Art2{
+    background-color: var(--color-azul);
+    padding: 4px 2px;
+}
+
+#Art3{
+    background-color: var(--color-morado);
+    padding: 5px 2px;
+}
+
+#Art4{
+    background-color: var(--color-rojo);
+    padding: 6px 2px;
+}
+
+.letracubo{
+    color: var(--color-blanco);
 }
 
 #Graficas article{
     float: left;
-    width: 31.9%;
     box-sizing: border-box;
+    display: block;
+    text-align: center;
+    width: 32%;
+    margin: 0 8px 0 0;
+}
+
+#Art5{
+     border: 1px solid red; 
+     position: relative;
+     padding: 20px;
 }
 
 #Graficas article img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.letraencabezado{
+    display: block; 
+    text-align: center; 
+    margin-bottom: 5px;
+}
+
+#encabezado1{
+    border: 1px solid red;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+    font-size: 1.6em; 
+}
+
+#Art6{
+    /* border: 1px solid blue; */
+}
+
+#encabezado2{
+    border: 1px solid red;
     text-align: center;
-    width: 90%;
+    margin: 0 auto;
+    font-size: 1.6em;
+}
+#Art7{
+    /* border: 1px solid green; */
+}
+
+#encabezado3{
+    border: 1px solid red;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 1.6em;
 }
 
 #Usuarios article{
